# orchestrix

./: .container-versions.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_AUDIT_REPORT.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  SESSION_SUMMARY.md  TODO.md  commit_lakehouse.sh  commit_summary.sh  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml  pyproject.toml.ty  workspace.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  security.yml
.github/workflows_archive/: ci.yml  security.yml
assets/architecture/: DECISION_LOG.md
assets/guide/: USAGE_LIB_GUIDE.md
assets/mkdocs/: index.md
bases/banking/: aggregate.py  handlers.py
bases/gcp_demo/: main.py  pubsub_demo.py
bases/notifications/: __init__.py  main.py
benchmarks/: README.md  __init__.py  test_event_store_benchmark.py
components/core/: aggregate.py  command_handler.py  exceptions.py  messaging.py  pyproject.toml
components/infrastructure/: pyproject.toml
components/infrastructure/orchestrix/infrastructure/: inmemory_store.py  postgres_store.py  tracing.py
components/infrastructure/orchestrix/infrastructure/migrations/: 001_postgres_schema_rollback.sql
components/orchestrix/: __init__.py
docs/: 404.html  CHANGELOG.md  DEPLOYMENT.md  LIBRARY_PUBLISHING.md  POLYLITH_CHEATSHEET.md  index.html  index.md  markdown-demo.md  objects.inv  sitemap.xml
docs/api/: core.md  infrastructure.md
docs/architecture/: ASYNC_DESIGN.md  CONSOLIDATION_DECISION.md  DECISION_LOG.md  PHASE_4_VERIFICATION.md  POLYLITH_MIGRATION_CONCEPT.md
docs/demos/: index.html
docs/deployment/: APPLICATION_DEPLOYMENT.md  production.md
docs/development/: contributing.md  testing.md
docs/examples/: index.html
docs/getting-started/: concepts.md  quick-start.md
docs/guide/: PRODUCTION_READY.md  USAGE_LIB_GUIDE.md  best-practices.md  index.html  message-bus.md
docs/markdown-demo/: index.html
docs/mkdocs/: index.md
docs/search/: search_index.json
examples/: observability.py  order_module.py  pyproject.toml  run_order_example.py  validated_messages.py
examples/banking/: aggregate.py  example.py  handlers.py  models.py  saga.py
examples/ecommerce/: aggregate.py  example.py  handlers.py  models.py  saga.py
examples/lakehouse/: IMPLEMENTATION_SUMMARY.md  README.md  README_GDPR.md  aggregate.py  engine.py  example.py  handlers.py  models.py  saga.py
examples/notifications/: example.py  handlers.py  models.py
examples/projections/: README.md  __init__.py  example.py
examples/prometheus/: __init__.py  example.py
examples/sagas/: README.md  __init__.py  example.py
examples/tracing/: __init__.py  example.py
examples/versioning/: __init__.py  example.py
migrations/: 001_postgres_schema.sql
projects/: gcp_demo.py
projects/banking-demo/: pyproject.toml
projects/banking_demo/: Dockerfile  README.md  pyproject.toml
projects/ecommerce-demo/: pyproject.toml
projects/ecommerce_demo/: README.md  pyproject.toml
projects/events_and_commands_demo/: demo_events_and_commands.py  pyproject.toml
projects/events_and_commands_demo/simple_module/: module.py
projects/gcp_demo/: README.md  pyproject.toml
projects/lakehouse-demo/: pyproject.toml
projects/lakehouse_demo/: README.md  pyproject.toml
projects/lakehouse_fastapi_demo/: README.md  pyproject.toml  run_fastapi.sh
projects/lakehouse_fastapi_demo/http_requests/: append_and_consume_demo.sh  consume_all_batches_demo.sh  e2e_csv_demo.sh  error_case_invalid_upload.sh  replay_multiple_datasets.sh  sales_2024_01.csv
projects/notifications-demo/: pyproject.toml
projects/notifications_demo/: README.md  pyproject.toml
projects/orchestrix/: pyproject.toml
projects/orchestrix/orchestrix/: __init__.py
projects/orchestrix/src/orchestrix/: __init__.py
projects/orchestrix_lib/: .gitignore  README.md  pyproject.toml  sync_bricks.sh
projects/orchestrix_lib/orchestrix/: __init__.py
projects/orchestrix_lib/orchestrix/core/common/: __init__.py  exceptions.py  logging.py  observability.py  validation.py
projects/orchestrix_lib/orchestrix/core/execution/: saga.py
projects/orchestrix_lib/orchestrix/core/messaging/: __init__.py  command_handler.py  dead_letter_queue.py  message.py  message_bus.py
projects/orchestrix_lib/orchestrix/infrastructure/eventsourcingdb/: __init__.py
projects/orchestrix_lib/orchestrix/infrastructure/memory/: __init__.py  async_bus.py
projects/orchestrix_lib/orchestrix/infrastructure/observability/: prometheus.py
projects/orchestrix_lib/orchestrix/infrastructure/postgres/: store.py
projects/projection_demo/: demo_projection.py  pyproject.toml
projects/projection_demo/simple_module/: module.py
projects/tracing_demo/: demo_tracing.py  pyproject.toml
projects/validation_demo/: demo_validation.py  pyproject.toml
projects/versioning_demo/: demo_versioning.py  pyproject.toml
src/orchestrix/: __init__.py  command_handler.py  dead_letter_queue.py  event_store.py  exceptions.py  logging.py  message.py  message_bus.py  module.py  snapshot.py
test/: __init__.py  conftest.py
test/benchmarks/: test_event_store_benchmark.py  test_message_bus_benchmark.py
test/projects/: test_validation_integration.py
tests/: conftest.py  test_aggregate_repository.py  test_async_bus.py  test_async_store.py  test_dead_letter_queue.py  test_edge_cases.py  test_error_handling.py  test_eventsourcingdb_store.py  test_inmemory_bus.py  test_inmemory_store.py  test_logging.py  test_memory_compatibility.py  test_message.py  test_message_metadata.py  test_observability.py  test_postgres_store.py  test_retry.py  test_snapshots.py  test_validation.py  test_validation_integration.py
tests/benchmarks/: README.md  pyproject.toml  test_event_store_benchmark.py  test_message_bus_benchmark.py
tests/integration/: test_order_flow.py  test_postgres_store.py
tests/projects/: test_integration.py  test_order_flow.py  test_postgres_store_integration.py  test_validation_integration.py
(+248 files in other folders)
