
[project]
name = "orchestrix-workspace"
version = "0.1.0"
description = "Orchestrix Polylith Workspace"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [{ name = "Orchestrix Team" }]
dependencies = [
    "asyncpg>=0.29.0,<1.0.0",
    "opentelemetry-api>=1.24.0,<2.0.0",
    "opentelemetry-exporter-jaeger>=1.21.0,<2.0.0",
    "deprecated>=1.2.0,<2.0.0",
    "google-cloud-bigquery>=3.40.0",
]

    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"


[tool.uv]
managed = true

[tool.uv.workspace]
members = ["projects/*"]

[tool.uv.sources]
orchestrix = { workspace = true }

[tool.polylith]
namespace = "orchestrix"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "polylith-cli>=1.41.1",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "ty>=0.0.9",
    "testcontainers[postgres]",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]
dist-dir = "output/dist"



[tool.hatch.build.targets.wheel]
packages = ["components/orchestrix"]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.

[tool.polylith.bricks]
# Core modules
"components/orchestrix/core/common" = "orchestrix/core/common"
"components/orchestrix/core/eventsourcing" = "orchestrix/core/eventsourcing"
"components/orchestrix/core/execution" = "orchestrix/core/execution"
"components/orchestrix/core/messaging" = "orchestrix/core/messaging"
# Infrastructure modules
"components/orchestrix/infrastructure/eventsourcingdb" = "orchestrix/infrastructure/eventsourcingdb"
"components/orchestrix/infrastructure/memory" = "orchestrix/infrastructure/memory"
"components/orchestrix/infrastructure/observability" = "orchestrix/infrastructure/observability"
"components/orchestrix/infrastructure/postgres" = "orchestrix/infrastructure/postgres"
# Bases


# ============================================================================
# Code Quality Tools Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=orchestrix",
    "--cov-report=term-missing",
    "--cov-report=html:output/htmlcov",
    "--cov-report=xml:output/coverage.xml",
]
asyncio_mode = "auto"
markers = [
    "integration: mark test as an integration test",
]

[tool.coverage.run]
source = ["components/orchestrix/core", "components/orchestrix/infrastructure", "projects"]
omit = ["test/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "C90", "N", "D", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"
]
ignore = [
    "D100", "D104", "D107", "ANN204", "COM812", "ISC001", "TRY003", "EM102", "PLR2004", "E402",
    "EM101", "PLC0415", "ANN401",
    "PLW0603", "PLC0105", "TRY", "N818", "B904", "E501",
    "I001"
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "S101", # Use of assert detected
    "ANN",  # Missing type annotation
    "D",    # Missing docstring
    "B017", # pytest.raises(Exception)
    "PT011", # pytest.raises() is too broad
    "ARG",  # Unused arguments
    "PLC0415", # Import outside toplevel
    "EM101", # Exception must not use a string literal
    "SIM105", # Use contextlib.suppress
    "TRY002", # Create your own exception
    "SIM117", # Use single with statement
    "PT012", # pytest.raises() block should contain a single simple statement
]
"components/orchestrix/infrastructure/gcp_bigquery/store.py" = ["S608"]
"examples/**/*.py" = ["D", "T201", "ANN"]
"bases/**/*.py" = [
    "S311", # Standard pseudo-random generators
    "ANN003", # Missing type annotation for **kwargs
    "PLR0915", # Too many statements
    "E501", # Line too long
    "ARG002", # Unused method argument
    "RET504", # Unnecessary assignment
    "C901", # Function is too complex
    "TRY301", # Abstract raise to inner function
    "ANN201", # Missing return type annotation
    "RUF001", # Ambiguous unicode character
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "S324", # Insecure hash function
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
