[project]
name = "orchestrix-infrastructure"
version = "0.1.0"
description = "Infrastructure implementations for Orchestrix"
requires-python = ">=3.12"
dependencies = [
    "orchestrix-core",
    "asyncpg>=0.29.0",
    "eventsourcingdb>=1.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "prometheus-client>=0.19.0",
]

[tool.uv.sources]
orchestrix-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrix"]
