[project]
name = "ecommerce_demo"
version = "0.1.0"
description = "E-commerce demo application"
requires-python = ">=3.12,<3.14"
dependencies = [
    "orchestrix",
]

[tool.uv.sources]
orchestrix = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["../../bases/orchestrix/ecommerce"]

[tool.hatch.build.targets.wheel.force-include]
"../../components/orchestrix/core" = "orchestrix/core"
"../../components/orchestrix/infrastructure" = "orchestrix/infrastructure"
