[project]
name = "lakehouse_demo"
version = "0.1.0"
description = "Lakehouse demo application"
requires-python = ">=3.11,<3.14"
dependencies = [
    "orchestrix",
]

[tool.uv.sources]
orchestrix = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["../../bases/orchestrix/lakehouse"]

[tool.hatch.build.targets.wheel.force-include]
"../../components/orchestrix/core" = "orchestrix/core"
"../../components/orchestrix/infrastructure" = "orchestrix/infrastructure"
