[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "lakehouse_fastapi_demo"
version = "0.1.0"
description = "Polylith demo for a self-service Lakehouse platform."
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["orchestrix"]

[tool.polylith.bricks]
# Core modules
"../../components/orchestrix/core/common" = "orchestrix/core/common"
"../../components/orchestrix/core/eventsourcing" = "orchestrix/core/eventsourcing"
"../../components/orchestrix/core/execution" = "orchestrix/core/execution"
"../../components/orchestrix/core/messaging" = "orchestrix/core/messaging"
# Infrastructure modules
"../../components/orchestrix/infrastructure/eventsourcingdb" = "orchestrix/infrastructure/eventsourcingdb"
"../../components/orchestrix/infrastructure/memory" = "orchestrix/infrastructure/memory"
"../../components/orchestrix/infrastructure/observability" = "orchestrix/infrastructure/observability"
"../../components/orchestrix/infrastructure/postgres" = "orchestrix/infrastructure/postgres"
# Bases
"../../bases/orchestrix/lakehouse_fastapi_demo" = "orchestrix/lakehouse_fastapi_demo"

[tool.ruff]
line-length = 100
