[project]
name = "notifications_demo"
version = "0.1.0"
description = "Notifications demo application"
requires-python = ">=3.11,<3.14"
dependencies = [
    "orchestrix",
]

[tool.uv.sources]
orchestrix = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["../../bases/orchestrix/notifications"]

[tool.hatch.build.targets.wheel.force-include]
"../../components/orchestrix/core" = "orchestrix/core"
"../../components/orchestrix/infrastructure" = "orchestrix/infrastructure"
