[project]
name = "notifications_demo"
version = "0.1.0"
description = "Notifications demo application"
requires-python = ">=3.12,<3.14"
dependencies = [
    "orchestrix",
]

[project.scripts]
notifications-demo = "orchestrix.notifications.main:main"

[tool.uv.sources]
orchestrix = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
# Core modules
"../../components/orchestrix/core/common" = "orchestrix/core/common"
"../../components/orchestrix/core/eventsourcing" = "orchestrix/core/eventsourcing"
"../../components/orchestrix/core/execution" = "orchestrix/core/execution"
"../../components/orchestrix/core/messaging" = "orchestrix/core/messaging"
# Infrastructure modules
"../../components/orchestrix/infrastructure/eventsourcingdb" = "orchestrix/infrastructure/eventsourcingdb"
"../../components/orchestrix/infrastructure/memory" = "orchestrix/infrastructure/memory"
"../../components/orchestrix/infrastructure/observability" = "orchestrix/infrastructure/observability"
"../../components/orchestrix/infrastructure/postgres" = "orchestrix/infrastructure/postgres"
# Bases
"../../bases/orchestrix/notifications" = "orchestrix/notifications"
