[project]
name = "orchestrix"
version = "0.1.0"
description = "A modular event-driven architecture framework"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "eventsourcingdb>=1.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "prometheus-client>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrix"]

[tool.hatch.build.targets.wheel.force-include]
"../../components/orchestrix/core" = "orchestrix/core"
"../../components/orchestrix/infrastructure" = "orchestrix/infrastructure"
