[project]
name = "orchestrix"
version = "0.1.0"
description = "A modular event-driven architecture framework"
requires-python = ">=3.12,<3.14"
dependencies = [
    "asyncpg>=0.29.0",
    "eventsourcingdb>=1.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "prometheus-client>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrix"]

[tool.hatch.build.targets.wheel.force-include]
"../../components/orchestrix/core/common" = "orchestrix/core/common"
"../../components/orchestrix/core/eventsourcing" = "orchestrix/core/eventsourcing"
"../../components/orchestrix/core/execution" = "orchestrix/core/execution"
"../../components/orchestrix/core/messaging" = "orchestrix/core/messaging"
"../../components/orchestrix/infrastructure/eventsourcingdb" = "orchestrix/infrastructure/eventsourcingdb"
"../../components/orchestrix/infrastructure/memory" = "orchestrix/infrastructure/memory"
"../../components/orchestrix/infrastructure/observability" = "orchestrix/infrastructure/observability"
"../../components/orchestrix/infrastructure/postgres" = "orchestrix/infrastructure/postgres"
